<resources>
    <string name="app_name">teacher_assistant</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="student_information">Informacje o studencie</string>
    <string name="firstName">Imię</string>
    <string name="lastName">Nazwisko</string>
    <string name="studentNumber">Numer legitymacji (nr albumu)</string>
    <string name="add_student">Add student</string>
    <string name="pon">Pon</string>
    <string name="wt">Wt</string>
    <string name="sr">Śr</string>
    <string name="czw">Czw</string>
    <string name="pt">Pt</string>
    <string name="add_hour">Dodaj godzinę</string>
    <string name="start_hour">Godzina rozpoczęcia</string>
    <string name="end_hour">Godzina zakończenia</string>
    <string name="_00_00">00:00</string>
    <string name="del">Usuń</string>
    <string name="name">Name</string>
    <string name="edit">Edytuj</string>
    <string name="delete">Usuń</string>
    <string name="one">1</string>
    <string name="add_lesson">Dodaj zajęcia</string>
    <string-array name="days_array">
        <item>Poniedziałek</item>
        <item>Wtorek</item>
        <item>Środa</item>
        <item>Czwartek</item>
        <item>Piątek</item>
    </string-array>
</resources>