<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*">


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="65dp"
                    android:background="@drawable/header_shape"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="65dp"
                    android:background="@drawable/header_shape"
                    android:gravity="center"
                    android:text="@string/pon"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="65dp"
                    android:background="@drawable/header_shape"
                    android:gravity="center"
                    android:text="@string/wt"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="65dp"
                    android:background="@drawable/header_shape"
                    android:gravity="center"
                    android:text="@string/sr"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="65dp"
                    android:background="@drawable/header_shape"
                    android:gravity="center"
                    android:text="@string/czw"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="65dp"
                    android:background="@drawable/header_shape"
                    android:gravity="center"
                    android:text="@string/pt"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </TableRow>

        </TableLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>